# changedetection.io

./: CONTRIBUTING.md  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: containers.yml  pypi.yml  test-container-build.yml  test-only.yml
changedetectionio/: run_all_tests.sh
