[tool.poetry]
name = "changedetection.io"
version = "0.39.20.4"
description = "The best and simplest self-hosted free open source website change detection tracking, monitoring and notification service."
authors = ["dgtlmoon <dgtlmoon@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "~=2.0"
Flask-WTF = "^1.0.1"
eventlet = ">=0.31.0"
validators = "^0.20.0"
timeago = "~=1.0"
inscriptis = "~=2.2"
feedgen = "~=0.9"
Flask-Login = "~=0.5"
Flask-RESTful = "^0.3.9"
pytz = "^2022.6"

# Set these versions together to avoid a RequestsDependencyWarning
# >= 2.26 also adds Brotli support if brotli is installed
Brotli = "~=1.0"
requests = {version = "~=2.28", extras = ["socks"]}

urllib3 = ">1.26"
chardet = ">2.3.0"

WTForms = "~=3.0"
jsonpath-ng = "~=1.5.3"

# Notification library
apprise = "~=1.1.0"

# apprise mqtt https://github.com/dgtlmoon/changedetection.io/issues/315
paho-mqtt = "^1.6.1"

# Pinned version of cryptography otherwise
# ERROR: Could not build wheels for cryptography which use PEP 517 and cannot be installed directly
cryptography = "~=3.4"

# Used for CSS filtering
bs4 = "^0.0.1"

# XPath filtering, lxml is required by bs4 anyway, but put it here to be safe.
lxml = "^4.9.1"

# 3.141 was missing socksVersion, 3.150 was not in pypi, so we try 4.1.0
selenium = "~=4.1.0"

# https://stackoverflow.com/questions/71652965/importerror-cannot-import-name-safe-str-cmp-from-werkzeug-security/71653849#71653849
# ImportError: cannot import name 'safe_str_cmp' from 'werkzeug.security'
# need to revisit flask login versions
Werkzeug = "~=2.0.0"

# Templating, so far just in the URLs but in the future can be for the notifications also
Jinja2 = "~=3.1"
jinja2-time = "^0.2.0"

# jq not available on Windows so must be installed manually
# https://peps.python.org/pep-0508/#environment-markers
# https://github.com/dgtlmoon/changedetection.io/pull/1009
jq = [
    { version = "~=1.3", python = ">=3.8", platform = 'linux' },
]
playwright = [
    { version = "~=1.26", python = ">=3.8", markers = '"arm" not in platform_machine and "aarch" not in platform_machine' },
]

[tool.poetry.dev-dependencies]
pytest = "~=6.2"
pytest-flask = "~=1.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
